--- a/modulo3/intro-typescript/package.json
+++ b/modulo3/intro-typescript/package.json
@@ -1,11 +1,12 @@
 {
   "name": "intro-typescript",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsc && node ./build/exercicio5.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
