--- a/modulo3/Labebank/package.json
+++ b/modulo3/Labebank/package.json
@@ -8,5 +8,13 @@
     "start": "tsc && node build/index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13"
+  }
 }
