--- a/modulo3/to-do-list/package.json
+++ b/modulo3/to-do-list/package.json
@@ -13,9 +13,11 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.4"
   },
   "scripts": {
+    "dev": "ts-node-dev ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsc && node build/index.js"
   },
