--- a/modulo3/loteria/loterias/package.json
+++ b/modulo3/loteria/loterias/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@testing-library/react": "^13.4.0",
     "axios": "^0.27.2",
     "cra-template": "1.2.0",
+    "jest-watch-typeahead": "^2.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
