--- a/modulo3/estante-virtual/package.json
+++ b/modulo3/estante-virtual/package.json
@@ -7,11 +7,13 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@types/uuid": "^8.3.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "knex": "^2.3.0",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "uuid": "^9.0.0"
   },
   "name": "estante-virtual",
   "version": "1.0.0",
@@ -19,7 +21,8 @@
   "scripts": {
     "dev": "ts-node-dev ./src/index.ts",
     "start": "tsc && node ./build/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrations": "tsc && node ./build/database/migrations/Migrations.js"
   },
   "author": "",
   "license": "ISC",
