--- a/modulo3/estante-virtual/package.json
+++ b/modulo3/estante-virtual/package.json
@@ -2,7 +2,10 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.0",
     "@types/knex": "^0.16.1",
+    "jest": "^29.2.0",
+    "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
@@ -21,7 +24,7 @@
   "scripts": {
     "dev": "ts-node-dev ./src/index.ts",
     "start": "tsc && node ./build/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "migrations": "tsc && node ./build/database/migrations/Migrations.js"
   },
   "author": "",
